--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Create deployment archive
       run: |
         # Create tar archive excluding unnecessary files
+        tar --version
         tar -czf deploy.tar.gz \
           --exclude='deploy.tar.gz' \
           --exclude='.git' \
@@ -55,8 +56,8 @@ jobs:
           --exclude='tests' \
           --exclude='phpunit.xml' \
           --exclude='.phpunit.result.cache' \
-          --warning=no-file-changed \
-          .
+          . 2>&1 | grep -v "warning" || true
+        echo "Archive created: $(ls -lh deploy.tar.gz)"
           
     - name: Deploy via SCP
       run: |
