--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,12 @@ DB_PASS=root
 # Format: Bearer token dari device WhatsApp
 FONNTE_TOKEN=your_fonnte_token_here
 
+# WHITELIST NUMBERS
+# =================
+# Nomor WhatsApp yang boleh akses bot, pisahkan dengan koma
+# Contoh: 6282255623884,6281234567890
+WHITELIST_NUMBERS=
+
 # TIMEZONE
 # ========
 # Timezone untuk timestamps (lihat timezone PHP)
