--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
         ssh -p ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no \
           ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
           "cd ${{ secrets.SSH_DEPLOY_PATH }} && \
-           git stash && \
-           git pull origin master && \
+           git fetch origin master && \
+           git pull --ff-only origin master && \
            echo 'Git pull completed successfully'"
            
     - name: Post-deploy - Install dependencies
@@ -42,7 +42,7 @@ jobs:
       run: |
         ssh -p ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no \
           ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
-          "cd ${{ secrets.SSH_DEPLOY_PATH }} && chmod -R 755 . && chmod -R 777 error.log 2>/dev/null || true"
+          "cd ${{ secrets.SSH_DEPLOY_PATH }} && chmod -R 755 . && touch error.log && chmod 664 error.log 2>/dev/null || true"
           
     - name: Deployment complete
       run: echo "✅ Deployment to ${{ secrets.SSH_HOST }} completed successfully!"
