feat: add custom artisan migrations, seeders, and MVC admin foundation

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,13 @@ APP_ENV=development
 
 # Debug mode (true/false)
 APP_DEBUG=true
+
+# GOOGLE OAUTH (Admin Interface)
+# ==============================
+# OAuth Client dari Google Cloud Console
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=https://keuangan.rayfa.my.id/admin/auth/google/callback
+
+# Email admin yang diizinkan login (pisahkan dengan koma)
+ADMIN_ALLOWED_EMAILS=
