--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,13 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": ">=7.4",
-        "phpoffice/phpspreadsheet": "^1.29"
+        "php": ">=8.1",
+        "phpoffice/phpspreadsheet": "^1.29",
+        "google/apiclient": "^2.18"
     },
     "autoload": {
-        "classmap": [
-            "services/",
-            "handlers/",
-            "utils/"
-        ]
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
