--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "config": {
+        "platform": {
+            "php": "8.1.33"
+        }
     }
 }
