--- a/.env.example
+++ b/.env.example
@@ -50,7 +50,7 @@ APP_DEBUG=true
 # OAuth Client dari Google Cloud Console
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=https://keuangan.rayfa.my.id/admin/auth/google/callback
+GOOGLE_REDIRECT_URI=http://localhost:8000/admin/auth/google/callback
 
 # Email admin yang diizinkan login (pisahkan dengan koma)
 ADMIN_ALLOWED_EMAILS=
